# model-service

./: .gitignore  .pylintrc  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pylinters.yml
models/: model.h5
src/model_service/: app.py  health.py  model_wrapper.py  spam.py
