[project]
name = "model-service"
version = "0.1.0"
description = "Model service application"
authors = []
dependencies = [
    "tensorflow ~= 2.16",
    "scikit-learn ~= 1.4",
    "numpy ~= 1.26",
    "keras == 3.3.3",
    "remla24-team8-lib-ml == 0.1.4",
    "gdown == 4.5.1",
    "flask == 3.0.3",
    "gunicorn == 21.2.0"
]
requires-python = ">=3.12"

